added remove post functionality prior to home page + proposed compose workflow design.

--- a/client/main.jade
+++ b/client/main.jade
@@ -16,6 +16,7 @@ head
     link(rel="stylesheet" href="../assets/css/bootstrap.min.css")
     link(rel="stylesheet" href="../assets/css/mediumish.css")
 body
+    +navigation_header_bar
     div(id="app")
 
 
