--- a/imports/ui/layouts/main/main.scss
+++ b/imports/ui/layouts/main/main.scss
@@ -1,15 +1,16 @@
-.container {
-  margin: 0 auto;
-  width: 1000px;
-}
-
-.header {
-  background-color: $color-main-variant;
-  color: $color-main-light;
-  padding: 20px;
-  a {
-    color: $color-main-light;
-    display: inline-block;
-    margin-right: 10px;
-  }
-}
+//.container {
+//  margin: 0 auto;
+//  width: 1000px;
+//}
+//
+//
+//.header {
+//  background-color: $color-main-variant;
+//  color: $color-main-light;
+//  padding: 20px;
+//  a {
+//    color: $color-main-light;
+//    display: inline-block;
+//    margin-right: 10px;
+//  }
+//}
