--- a/client/navigation-header-bar.jade
+++ b/client/navigation-header-bar.jade
@@ -26,3 +26,9 @@ template(name='navigation_header_bar')
                             path(d="M20.067 18.933l-4.157-4.157a6 6 0 1 0-.884.884l4.157 4.157a.624.624 0 1 0 .884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z")
 
                 +loginButtons
+
+                template(name="login")
+                    +if atDisabled
+                        | Please wait...
+                    div(class=atClass)
+                        +atForm
