editor setup for katex ready, also included sublime like syntax enabled for code snippets using highlight.js

--- a/client/main.jade
+++ b/client/main.jade
@@ -13,6 +13,10 @@ head
     <!-- Fonts -->
     link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
     link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Righteous")
+    link(rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/monokai-sublime.min.css")
+
+    <!-- Scripts -->
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js")
 
     <!-- Bootstrap core CSS and Custom styles -->
     link(type="text/css" href="../assets/css/bootstrap.min.css")
