--- a/client/main.jade
+++ b/client/main.jade
@@ -17,6 +17,9 @@ head
 
     <!-- Scripts -->
     script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js")
+    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
 
     <!-- Bootstrap core CSS and Custom styles -->
     link(type="text/css" href="../assets/css/bootstrap.min.css")
@@ -24,8 +27,6 @@ head
 body
     +navigation_header_bar
     div(id="app")
-
-
 
 
 
