loaded atform accounts coupled with bootstrap and loaded in modal.

--- a/client/main.jade
+++ b/client/main.jade
@@ -28,6 +28,16 @@ body
     +navigation_header_bar
     div(id="app")
 
+    div(class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true")
+        div(class="modal-dialog modal-dialog-centered" role="document")
+            div(class="modal-content")
+                div(class="modal-header")
+                    h5(class="modal-title" id="exampleModalLongTitle")
+                    button(type="button" className="close" data-dismiss="modal" aria-label="Close")
+                        span(aria-hidden="true") X
+                div(class="modal-body")
+                    +atForm
+
 
 
 
