--- a/assets/css/mediumish.css
+++ b/assets/css/mediumish.css
@@ -174,6 +174,16 @@ span.post-name a,span.post-read-more a:hover {
 	border-radius:30px;
 	cursor:pointer;
 }
+
+.btn {
+	border: 1px solid #ccc;
+	background-color: #fafafa;
+}
+
+.btn:hover {
+	border: 1px solid #aaa;
+}
+
 .mediumnavigation .form-inline .btn:hover,.mediumnavigation .form-inline .btn:active {
 	background:transparent;
 	color:green;
